# nautilus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  elevator-pitch.md  mkdocs.yml  pyproject.toml  release-please-config.json  robots.txt  versions.json
.forge/: anti-cheat.yaml  prd.json
.forge/plans/: task-008.md
.github/: FUNDING.yml  dco.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: autofix.yml  ci.yml  dependabot-auto-merge.yml  docs-deploy.yml  docs.yml  nightly-cassette-refresh.yml  pypi-publish.yml
0.1/: 404.html  index.html  sitemap.xml
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/_index/: index.html
0.1.1/concepts/: index.html
0.1.1/getting-started/: index.html
0.1.1/how-to/: index.html
0.1.1/reference/: index.html
0.1.1/search/: search_index.json
0.1/concepts/: index.html
0.1/getting-started/: index.html
0.1/how-to/: index.html
0.1/reference/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  llms.txt  objects.inv  robots.txt  sitemap.xml
0.2/concepts/: index.html
0.2/getting-started/: index.html
0.2/how-to/: index.html
0.2/reference/: index.html
0.2/sdk/: mkdocs.yml
0.2/search/: search_index.json
benchmarks/: Dockerfile.bench  bench_session_signing.py  conftest.py  report.py
design-docs/: 03-living-brain.md  05-ecosystem-roadmap.md  rkm-event-sourcing-spike.md
docs/: _index.md  getting-started.md  index.md  llms.txt
docs/concepts/: architecture.md  attestation-chain.md  index.md  rkm-lifecycle.md
docs/how-to/: add-a-postgres-source.md  add-an-llm-source.md  authoring-rules.md  configure-attestation.md  developing-adapters.md  index.md  monitor-with-grafana.md  operator-guide.md  verify-a-token.md  write-a-routing-rule.md
docs/reference/: cli.md  rule-packs.md
examples/custom-adapter/: csv_adapter.py  test_compliance.py
examples/full-showcase/: docker-compose.yml
examples/quickstart/: README.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/_index/: index.html
latest/concepts/: index.html
latest/getting-started/: index.html
latest/how-to/: index.html
latest/reference/: index.html
latest/search/: search_index.json
nautilus/: __init__.py  cli.py
nautilus/adapters/: __init__.py  base.py  elasticsearch.py  influxdb.py  llm.py  neo4j.py  pgvector.py  postgres.py  rest.py  s3.py  schema.py  servicenow.py
nautilus/analysis/: fallback.py  pattern_matching.py
nautilus/attestation/: __init__.py  jwks.py  key_ring.py  session_token.py
nautilus/audit/: logger.py
nautilus/cli/: __init__.py  __main__.py  _common.py  adapters.py  attestation.py  events.py  health.py  key.py  rkm.py  rule.py  rules.py  serve.py  version.py
nautilus/config/: loader.py  models.py
nautilus/core/: __init__.py  attestation_payload.py  attestation_sink.py  broker.py  circuit_breaker.py  fathom_router.py  metrics.py  models.py  postgres_store.py  session_pg.py  session_sqlite.py  signer.py  source_state.py  types.py
nautilus/forensics/: handoff_worker.py
nautilus/ingest/: __init__.py  baseline.py  config.py  errors.py  quarantine.py  schema_change.py  validator.py
nautilus/observability/: logging.py  metrics.py
nautilus/rkm/: __init__.py  audit_emitter.py  lineage.py  queue.py  review.py  types.py
nautilus/rules/: __init__.py  facts.py
nautilus/transport/: auth.py  fastapi_app.py  mcp_server.py
nautilus/ui/: router.py
rule-packs/cve-rem-cmdb-substrate/: README.md  pack.yaml
scripts/: check_version_sync.py
spikes/: __init__.py
spikes/event-sourcing/: __init__.py  test_replay.py
spikes/event_sourcing/: __init__.py  replay.py
tests/: conftest.py
tests/integration/: audit_helpers.py  test_admin_auth.py  test_admin_flow.py  test_attestation_sink_fault_injection.py  test_auto_promote_flag.py  test_backwards_compat.py  test_cost_caps.py  test_fact_set_hash.py  test_fathom_smoke.py  test_ingest_integrity.py  test_key_rotation.py  test_llm_adapter_chat.py  test_llm_adapter_embeddings.py  test_llm_session_signing.py  test_mcp_e2e.py  test_mvp_e2e.py  test_pattern_tracker.py  test_per_source_response_hash.py  test_response_hash_byte_mutation.py  test_rkm_pipeline.py  test_rkm_queue.py  test_rkm_relationship_facts.py  test_rkm_sandbox.py  test_rule_lineage.py  test_schema_drift_quarantine.py  test_session_token_e2e.py  test_session_tokens.py  test_source_state.py
tests/unit/: test_adapter_response_hash.py  test_adapter_scope.py  test_admin_attestation.py  test_admin_audit_chain.py  test_admin_routes.py  test_broker.py  test_cli_cost_caps.py  test_cli_schema_ack.py  test_cli_sources.py  test_consistency_checks.py  test_event_type_drift.py  test_json_logging.py  test_key_rotation.py  test_otel_spans.py  test_pattern_analyzer.py  test_session_token_plumbing.py  test_sql_injection_static.py
(+200 files in other folders)
