[project]
name = "nautilus-rkm"
version = "0.1.2"
description = "Nautilus data broker + reasoning engine: intent-aware scoped query execution, multi-agent handoffs, LLM intent analysis, and forensic escalation via Fathom rules"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Sean Mauk", email = "seanmauk@krakennetworks.com" }]
keywords = ["fathom", "policy", "broker", "security", "scope", "clips", "ai-agent", "data-broker", "routing", "audit", "attestation", "compliance", "nist", "hipaa", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "fathom-rules>=0.3.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "pyyaml>=6.0",
    "pyjwt>=2.12.1",
    "cryptography>=46.0.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "elasticsearch>=8,<9",
    "neo4j>=5",
    "mcp>=1.12",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "influxdb-client>=1.40",
    "aiobotocore>=2.12",
    # nautilus-update-1 Phase 9 / Task 57 (FR-12, AC-4.4, AC-5.4): direct deps
    # required by ingest-integrity validators (jsonschema), session-signing
    # canonicalization (rfc8785), the LLM adapter providers (openai/anthropic/
    # tiktoken), and Vault KV/transit secret resolution (hvac).
    "jsonschema>=4.0",
    "rfc8785",
    "openai>=1.50",
    "anthropic>=0.40",
    "tiktoken",
    "hvac",
]

[project.urls]
Homepage = "https://github.com/KrakenNet/nautilus"
Repository = "https://github.com/KrakenNet/nautilus"
Documentation = "https://krakennet.github.io/nautilus"
Changelog = "https://github.com/KrakenNet/nautilus/blob/main/CHANGELOG.md"
Issues = "https://github.com/KrakenNet/nautilus/issues"

[project.scripts]
nautilus = "nautilus.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.5",
    "pyright>=1.1.370",
    "pip-licenses>=5.0",
    "respx>=0.21",
    "pytest-recording>=0.13",
    "testcontainers[elasticsearch,neo4j]>=4.0",
    "locust>=2.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "copier>=9.0",
    # nautilus-update-1 Task 57: gql is dev-only for Nautobot adapter test helpers.
    "gql[httpx]",
]
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-api>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "prometheus-client>=0.20",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mike>=2.1",
]

[project.entry-points."fathom.packs"]
data-routing-nist = "nautilus.rule_packs.data_routing_nist"
data-routing-hipaa = "nautilus.rule_packs.data_routing_hipaa"

[project.entry-points."nautilus.adapters"]
influxdb = "nautilus.adapters.influxdb"
s3 = "nautilus.adapters.s3"
# nautilus-update-1 Phase 6 / Task 37 (TD-2): LLM adapter is first-party. Listed
# here for entry-point discovery parity with influxdb/s3 even though the core
# ADAPTER_REGISTRY also imports it directly.
llm = "nautilus.adapters.llm"

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nautilus*"]
exclude = ["tests*", "specs*", "docs*"]

[tool.setuptools.package-data]
"nautilus.analysis.llm.prompts" = ["*.txt"]
"nautilus.rules" = ["**/*.yaml"]
"nautilus.ui" = ["templates/**/*", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "ASYNC"]

[tool.pyright]
strict = ["nautilus", "tests"]
include = ["nautilus", "tests"]
extraPaths = [
    "packages/nautilus-adapter-sdk/src",
    "packages/nautilus-adapter-nautobot/src",
]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests (e.g. latency harness with 1000 requests)",
    "docker: tests that require a local Docker daemon",
    # nautilus-update-1 / Task 47 — Nautobot testcontainer marker. Tests
    # marked with ``nautobot_live`` spin a fresh ``networktocode/nautobot:3.1``
    # container. Branch CI runs in cassette-replay mode (VCR_MODE=replay).
    "nautobot_live: tests that hit a live Nautobot testcontainer",
]
addopts = "--strict-markers --cov=nautilus --cov-branch"
